--- a/MediaExtractor/Properties/Resources.de-DE.resx
+++ b/MediaExtractor/Properties/Resources.de-DE.resx
@@ -456,4 +456,7 @@
   <data name="MenuAppearanceLanguageFrench" xml:space="preserve">
     <value>Französisch (Français)</value>
   </data>
+  <data name="MenuAppearanceLanguageSpanish" xml:space="preserve">
+    <value>Spanisch (Español)</value>
+  </data>
 </root>
